src/test/data/tests/const/invalid/variable.c
int a = 0;
int test_value = a;

int main(void) {
    return test_value;
}
